[Modified] OC-160 #comment minor changes #time 4h

--- a/src/frontend/locales/en/userGroups.json
+++ b/src/frontend/locales/en/userGroups.json
@@ -80,6 +80,7 @@
     "COMPONENTS": "Components",
     "NAME": "Name",
     "DESCRIPTION": "Description",
+    "HEADER_ADMIN_CARDS": "Admin Cards",
     "ADD_BUTTON": "Add",
     "CURRENT_USER_GROUP": "Current group"
   }
