[Modified] OC-402 #comment implemented validation for template duplicate dialog #time 1h

--- a/src/frontend/locales/en/templates.json
+++ b/src/frontend/locales/en/templates.json
@@ -1,4 +1,10 @@
 {
+  "ADD": {
+    "VALIDATION_MESSAGES": {
+      "NAME_REQUIRED": "Name is a required field",
+      "DESCRIPTION_REQUIRED": "Description is a required field"
+    }
+  },
   "LIST":{
     "IMPORT_BUTTON": "Import template",
     "EMPTY_LIST": "The list of Templates is empty",
