[Modified] OC-408 #comment added bitbucket credentials #time 2h

--- a/src/frontend/locales/en/users.json
+++ b/src/frontend/locales/en/users.json
@@ -11,6 +11,8 @@
       "EMAIL": "Email",
       "PASSWORD": "Password",
       "REPEAT_PASSWORD": "Repeat password",
+      "BITBUCKET_USER": "Bitbucket User",
+      "BITBUCKET_PASSWORD": "Bitbucket Password",
       "HINT_1": "Provide credential information",
       "PAGE_2": "User Details",
       "NAME": "Name",
@@ -53,6 +55,8 @@
       "EMAIL_EXIST": "The user with such email already exist",
       "PASSWORD": "Password",
       "REPEAT_PASSWORD": "Repeat password",
+      "BITBUCKET_USER": "Bitbucket User",
+      "BITBUCKET_PASSWORD": "Bitbucket Password",
       "HINT_1": "Provide credential information",
       "PAGE_2": "User Details",
       "NAME": "Name",
@@ -106,6 +110,7 @@
       "EMAIL": "Email",
       "PASSWORD": "Password",
       "REPEAT_PASSWORD": "Repeat password",
+      "BITBUCKET_USER": "Bitbucket User",
       "HINT_1": "Provide credential information",
       "PAGE_2": "User Details",
       "NAME": "Name",
