[Modified] OC-405 #comment subscription update functionality #time 5h

--- a/src/frontend/locales/en/admin_cards.json
+++ b/src/frontend/locales/en/admin_cards.json
@@ -6,8 +6,9 @@
     "ADD_BUTTON": "Add Admin Card",
     "EMPTY_LIST": "The list of Admin Cards is empty",
     "HEADER": "Admin Cards",
-    "NO_UPDATES": "No updates available",
+    "NO_UPDATES": "No updates are available",
     "UPDATES": "New version is available",
+    "SUBSCRIPTION_UPDATES": "Updates are available",
     "NAME": "Name"
   }
 }
