[Modified] OC-406 #comment changed Subscription Update component #time 2h

--- a/src/frontend/locales/en/update_subscription.json
+++ b/src/frontend/locales/en/update_subscription.json
@@ -2,8 +2,8 @@
   "FORM": {
     "HEADER": "Update Subscription",
     "UPDATE_SUBSCRIPTION": "Update",
-    "USER": "User",
+    "INVOKERS": "Invokers",
     "HINT_1": "This update overwrites all local template and invoker files provided from becon",
-    "PAGE_1": "General Data"
+    "PAGE_1": "Subscription Details"
   }
 }
