[Modified] OC-406 #comment merged with backend Subscription Update component #time 3h

--- a/src/frontend/locales/en/update_subscription.json
+++ b/src/frontend/locales/en/update_subscription.json
@@ -2,7 +2,7 @@
   "FORM": {
     "HEADER": "Update Subscription",
     "UPDATE_SUBSCRIPTION": "Update",
-    "INVOKERS": "Invokers",
+    "FILE_NAMES": "File Names",
     "HINT_1": "This update overwrites all local template and invoker files provided from becon",
     "PAGE_1": "Subscription Details"
   }
