[Modified] OC-406 #comment changed translation #time 5m

--- a/src/frontend/locales/en/update_subscription.json
+++ b/src/frontend/locales/en/update_subscription.json
@@ -3,7 +3,7 @@
     "HEADER": "Update Invokers and Templates",
     "UPDATE_SUBSCRIPTION": "Update",
     "FILE_NAMES": "File Names",
-    "HINT_1": "This update overwrites all local template and invoker files provided from becon",
+    "HINT_1": "This update overwrites all local template and invoker files provided from becon. Please, restart your server after update!",
     "PAGE_1": "Subscription Details"
   }
 }
