[Modified] OC-353 #comment implemented enable/disable logs for schedule #time 1h

--- a/src/frontend/locales/en/schedules.json
+++ b/src/frontend/locales/en/schedules.json
@@ -103,6 +103,7 @@
     "FORM": {
       "PAGE_1": "General Data",
       "TITLE": "Title",
+      "LOGS": "Logs",
       "CONNECTION": "Connection",
       "CONNECTION_PLACEHOLDER": "Choose connection...",
       "DESCRIPTION_DEFAULT": "Here you will see the description of the connection",
@@ -126,6 +127,9 @@
     "COLOR_TITLE": "Color",
     "FORM": {
       "PAGE_1": "General Data",
+      "LOGS": "Logs",
+      "LOGS_TITLE_ENABLED": "Logs are activated",
+      "LOGS_TITLE_DISABLED": "Logs are deactivated",
       "TITLE": "Title",
       "CONNECTION": "Connection",
       "CONNECTION_PLACEHOLDER": "Choose connection...",
