[Added] OC-416 #comment created add/update param for invoker fields in connections #time 20h

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -76,6 +76,7 @@
     "UPDATE_THEME": "The application theme was successfully changed"
   },
   "ERROR": {
+    "LOGIN_GRAPHQL": "GraphQL was not connected",
     "ADD_USER": {
       "__DEFAULT__": "The user was not added."
     },
