--- a/src/frontend/locales/en/connectors.json
+++ b/src/frontend/locales/en/connectors.json
@@ -20,6 +20,10 @@
       "INVOKER_DESCRIPTION_DEFAULT": "Here you will see the description of the connector",
       "ICON": "Icon",
       "ICON_PLACEHOLDER": "Please select an icon...",
+      "TIMEOUT": "Timeout",
+      "SSL_CERT": "SSL Certificate",
+      "SSL_CERT_ENABLED": "SSL Certificate is activated",
+      "SSL_CERT_DISABLED": "SSL Certificate is deactivated",
       "PAGE_1": "General Data",
       "URL": "URL",
       "APIKEY": "API-Key",
@@ -55,6 +59,10 @@
       "INVOKER_DESCRIPTION_DEFAULT": "Here you will see the description of the connector",
       "ICON": "Icon",
       "ICON_PLACEHOLDER": "Please select an icon...",
+      "TIMEOUT": "Timeout",
+      "SSL_CERT": "SSL Certificate",
+      "SSL_CERT_ENABLED": "SSL Certificate is activated",
+      "SSL_CERT_DISABLED": "SSL Certificate is deactivated",
       "PAGE_1": "General Data",
       "URL": "URL",
       "APIKEY": "API-Key",
