[Fixed] OC-430 #comment fixed select search #time 2h

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -77,6 +77,7 @@
     "UPDATE_THEME": "The application theme was successfully changed"
   },
   "ERROR": {
+    "UPDATE_INVOKERMETHOD": "The invoker operation was not updated",
     "LOGIN_GRAPHQL": "GraphQL was not connected",
     "ADD_USER": {
       "__DEFAULT__": "The user was not added."
