[Added] OC-657 #comment added categorizing, tab panel, category in admin panel, breadcrumbs, validation title in connection update, change the sequence of columns  #time 30d

--- a/src/frontend/locales/en/connections.json
+++ b/src/frontend/locales/en/connections.json
@@ -31,7 +31,9 @@
       "PAGE_3": "Methods",
       "ADD_TEMPLATE": "Add Template",
       "ADD_TEMPLATE_TITLE": "Add Template",
-      "HINT_3": "Add methods"
+      "HINT_3": "Add methods",
+      "CATEGORY": "Category",
+      "NEW_CATEGORY": "New category"
     },
     "LIST_BUTTON": "Connections",
     "ADD_BUTTON": "Add & Close",
